Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <p>Coming soon. But what actually, that's obviously a sekrit <img class="emoji" title=":wink:" alt=":wink:" src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f609.png" height="20" width="20" align="absmiddle"></p>
+        <p>Coming soon. But what actually, that's obviously a c-krit <img class="emoji" title=":wink:" alt=":wink:" src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f609.png" height="20" width="20" align="absmiddle"></p>
 
 <p>To see more, click the view on GitHub button above.</p>
 
