Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="zyabinVI : ">
+    <meta name="description" content="zyabinVI : An experimenting organization">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.com/zyabinVI">View on GitHub</a>
 
           <h1 id="project_title">zyabinVI</h1>
-          <h2 id="project_tagline"></h2>
+          <h2 id="project_tagline">An experimenting organization</h2>
 
         </header>
     </div>
@@ -27,26 +27,11 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <p>Coming soon. But what actually, that's obviously a c-krit <img class="emoji" title=":wink:" alt=":wink:" src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f609.png" height="20" width="20" align="absmiddle"></p>
+        <p>Coming soon. But what actually, that's obviously a c-krit <g-emoji alias="wink" fallback-src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f609.png">😉</g-emoji></p>
+
+<p><a href="http://zyabinVI.github.io/blog">C'est mon "Blog"</a>.</p>
 
 <p>To see more, click the view on GitHub button above.</p>
-
-<p>Participants of this organization:</p>
-
-<table>
-<thead>
-<tr>
-<th align="left">Participants of zyabinVI</th>
-<th align="right">Role</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td align="left"><a href="https://github.com/zyabin101" class="user-mention">@zyabin101</a></td>
-<td align="right">creator, browncoat</td>
-</tr>
-</tbody>
-</table>
       </section>
     </div>
 
